sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:24: error: value =< is not a member of Int
}while(indice1!=0 || indice2 !=0 || fin =< nb-2 || fin >= 0)
                                        ^